<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="168dp"
                    android:layout_height="114.33dp"
                    android:src="@drawable/ic_splash" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="22dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/icon_hoSo"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_hoso" />

                    <TextView
                        android:id="@+id/text_hoSo"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/txt_HoSo"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/icon_rightButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_rightbutton" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/icon_matkhau"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_matkhau" />

                    <TextView
                        android:id="@+id/text_matkhau"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/txt_MatKhau"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/icon_rightButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_rightbutton" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/icon_ngonngu"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_ngonngu" />

                    <TextView
                            android:id="@+id/text_ngonngu"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:text="@string/txt_NgonNgu"
                        android:textSize="16sp"
                        android:layout_weight="1" />

                    <ImageView
                        android:id="@+id/icon_rightButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="20dp"
                        android:src="@drawable/ic_rightbutton" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="52dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical">

                    <ImageView
                        android:id="@+id/icon_darkmode"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_marginStart="20dp"
                        android:src="@drawable/ic_darkmode" />


                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/switch_darkmore"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:text="@string/txt_CheDoToi"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="80dp"
                    android:layout_marginHorizontal="150dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/btn_logout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_DangXuat"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:background="@drawable/border_button_red"
                        android:textColor="#FF0000"
                        android:padding="10dp" />
                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>
</FrameLayout>