<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.NewPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="414dp"
        android:layout_marginTop="170dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="168dp"
            android:layout_height="114.33dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_splash" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_mKMoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_NMKM"
                android:textColor="#42474E"
                android:textSize="13sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/Button_MatKhauMoi"
                    android:layout_width="382dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="25dp"
                    android:background="@drawable/border_radius"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:hint="@string/hin_KyTu"
                    android:padding="15dp"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/image_lookBlack1"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="320dp"
                    android:src="@drawable/ic_lookblack" />

            </RelativeLayout>

            <TextView
                android:id="@+id/txt_nLMKMoi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_NLMKM"
                android:textColor="#42474E"
                android:textSize="13sp"
                android:textStyle="bold" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <EditText
                    android:id="@+id/txtLaiMatKhauMoi"
                    android:layout_width="382dp"
                    android:layout_height="48dp"
                    android:layout_marginHorizontal="25dp"
                    android:background="@drawable/border_radius"
                    android:ems="10"
                    android:hint="@string/hin_KyTu"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:textSize="18dp" />

                <ImageView
                    android:id="@+id/image_lookBlack2"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="320dp"
                    android:src="@drawable/ic_lookblack" />
            </RelativeLayout>

            <Button
                android:id="@+id/button_DoiMK"
                android:layout_width="382dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Đổi mật khẩu"
                android:backgroundTint="@color/blue"/>

        </LinearLayout>
    </LinearLayout>
</FrameLayout>
